se agregan carpetas css y nbproject, y un cambio en index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, init-scale=1">
 
-        <title>Mi Blog</title>
+        <title>Mi Blog Personal</title>
 
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/estilos.css" rel="stylesheet">
