añadiendo contenido a movies

--- a/movies.html
+++ b/movies.html
@@ -8,5 +8,10 @@
 </head>
 <body>
 <h1>Mis películas favoritas</h1>
+  <ul>
+    <li>Moana</li>
+    <li>COCO</li>
+    <li>Pájaro loco</li>
+  </ul>
 </body>
 </html>
